--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-title:              Moon
-bio:                'Minimal, one column jekyll theme.'
+title:              龙吟
+bio:                '人生天地间, 忽如远行客'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
