--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site
 title:              龙吟
 bio:                '人生天地间, 忽如远行客'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "千秋邈矣独留我, 百战归来再读书"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/dali.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://longyintheworld.github.io/wandering/
