--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              龙吟
-bio:                '人生天地间, 忽如远行客'
-description:        "千秋邈矣独留我, 百战归来再读书"
+bio:                '人生天地间，忽如远行客。'
+description:        "千秋邈矣独留我，百战归来再读书。"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
