--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   taylantatli
+disqus_shortname:   visualization-of-movement
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -44,7 +44,7 @@ github:             username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+instagram:          gu_yuhang
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
@@ -53,7 +53,7 @@ steam:              username
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
-#weibo:             username
+weibo:             u/2234197177?profile_ftype=1&is_all=1#_0
 #flickr:            username
 #codepen:           username
 #keybase:           username
@@ -68,7 +68,7 @@ gems:
   - jekyll-gist
 
 jekyll-mentions:
-    base_url: https://github.com
+    base_url: https://longyintheworld.github.io/wandering/
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile]
