--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ disqus_shortname:   visualization-of-movement
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
+email: gu_yuhang@outlook.com
+#twitter:            username
 facebook:           username
-github:             username
+#github:             username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
@@ -49,7 +49,7 @@ instagram:          gu_yuhang
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
 #youtube:           username
 #soundcloud:        username
