--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus_shortname:   visualization-of-movement
 #bing-verify:
 email: gu_yuhang@outlook.com
 #twitter:            username
-facebook:           username
+#facebook:           username
 #github:             username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
