--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,13 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/dali.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://longyintheworld.github.io/wandering/
+url:                https://longyintheworld.github.io/wandering
+baseurl:            https://longyintheworld.github.io/wandering
+
+nav:
+  - GALLERY: "https://longyintheworld.github.io/wandering/gallery/"
+  - JOURNAL: "https://longyintheworld.github.io/wandering/journal/"
+  - ABOUT: "https://longyintheworld.github.io/wandering/about/"
 
 # Jekyll
 permalink:          /:title/
