--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ background:         'assets/img/dali.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://longyintheworld.github.io/wandering
+baseurl:            "/"
 
 # Jekyll
 permalink:          /:title/
