--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ background:         'assets/img/dali.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 
-url:                https://longyintheworld.github.io/wandering/
-#url:                http://localhost:4000/
+＃url:                https://longyintheworld.github.io/wandering/
+url:                http://localhost:4000/
 
 # Jekyll
 permalink:          /:title/
@@ -27,7 +27,7 @@ sass:
   sass_dir:         _sass
   style:            compressed
 
-url2:               "http://localhost:4000/wandering"
+#url2:               "http://localhost:4000/wandering"
 # Comments
 disqus_shortname:   longyintheworld
 
