--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ description: > # this means to ignore newlines until "baseurl:"
   I love this world.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-#url: "https://longyintheworld.github.io/wandering" # the base hostname & protocol for your site, e.g. http://example.com
-url: ""
+url: "https://longyintheworld.github.io/wandering/" # the base hostname & protocol for your site, e.g. http://example.com
+#url: ""
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
