--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
-title: Yuhang wandering in the world
-description: > # this means to ignore newlines until "baseurl:"
-  I love this world.
+title: 龙吟别来无恙
+description: 
 permalink: ':title/'
 baseurl:  # the subpath of your site, e.g. /blog
-#url: https://longyintheworld.github.io/wandering # the base hostname & protocol for your site, e.g. http://example.com
-url: ""
+url: https://longyintheworld.github.io/wandering # the base hostname & protocol for your site, e.g. http://example.com
+#url: ""
 #<div><center>Cartographer </center><center>Wanderluster</center><center>Bookworm</center><center>Shutterbug</center><center>Gymaholic</center></div>
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Yuhang # add your name
+author: 龙吟 # add your name
 author-img: yuhang.jpg # add your photo
 about-author: <div><center>Cartographer</center><center>Wanderluster</center><center>Bookworm</center><center>Shutterbug</center><center>Gymaholic</center></div> # add description
 twitter: # add your Twitter handle
